# decentralized_file_storage

./: .gitignore  Cargo.toml  README.md
middleware-go-impl/: go.mod  go.sum  main.go
middleware-go-impl/client_side/: getFile.go
middleware-go-impl/forwarder/: forwardReq.go  get_public_keys.go
middleware-go-impl/gateway_conn/: gatewayConn.go  gateway_conn.go  messageType.go
middleware-go-impl/get_node/: get_node.go
middleware-go-impl/host_append/: file_information.go  host_append.go  host_ping.go
middleware-go-impl/peer_check/: peer_check.go  peercheckFull.go  peercheckSocket.go
middleware-go-impl/remove_host/: remove_host.go
middleware-go-impl/smart_contract_inter/: smart_contract_inter.go
middleware-go-impl/util/: channels.go  initChannels.go  initClient.go  ipAddrType.go  randSeqGen.go  removeFunc.go
src/: README.md  http_server.rs  main.rs  tests.rs
src/blockchain/: block.rs  block_infor.rs  blockchain.rs  file_infor.rs  file_types.rs  mod.rs  pool_infor.rs  smart_contract_inter.rs
src/gui/: gui.rs  mod.rs  node_assist.rs  request_type.rs
src/util/: date_calc.rs  mod.rs  shared_bool.rs
