[package]
edition = "2021"
name = "file_blockchain_but_efficient"
version = "0.1.0"
[dependencies]
base64-url = "*"
datetime = "*"
serde_json = "*"
sha2 = "*"
tree_magic_fork = "*"
tungstenite = "*"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.serde]
features = ["derive"]
version = "*"
