[package]
edition = "2021"
name = "file_blockchain_but_efficient"
version = "0.1.0"
[dependencies]
base64-url = "*"
ctrlc = "*"
datetime = "*"
local-ip-address = "*"
serde_json = "*"
sha2 = "*"
tree_magic_fork = "*"
tungstenite = "*"

[dependencies.reqwest]
features = ["blocking", "json"]
version = "0.11"

[dependencies.serde]
features = ["derive"]
version = "*"
